# minimal-python-ml-cookiecutter

./: README.rst  cookiecutter.json
{{cookiecutter.package_name}}/: Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.package_name}}/.github/workflows/: ci_testing.yml
{{cookiecutter.package_name}}/cluster/: .dockerignore  Dockerfile  Makefile  README.md  launcher.py
{{cookiecutter.package_name}}/requirements/: base.in  dev.in
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: main.py
