[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.package_short_description}}"
authors = [{name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}"}]
license = "MIT"
readme = "README.md"